Update: Added a button for the borrowing history

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
     </div>
     <div class="actionButtons">
         <%= link_to "Manage Books", books_path, class:"btn btn-primary" %>
-        <%# <%= link_to "Track lending", lending_histories_path, class:"btn btn-secondary" %>
+        <%= link_to "Borrowing history", lending_histories_path, class:"btn btn-secondary" %>
     </div>
     </div>
 </div>
